--- a/app.json
+++ b/app.json
@@ -15,28 +15,21 @@
       "description": "If you need install packages for running your app, fill with space in between each package.Get them from the requirements file of the repo you want to deploy",
       "value": "None",
       "required": false
-    },
-    "REPO_URL": {
-      "description": "Enter the repository link that you want to deploy",
-      "value": "https://github.com/missemily2022/HerokuBanBypass",
-      "required": true
-    },
-    "PYTHON_FILE": {
-      "description": "Name of the python file that you need to run [use -m if you need to run __main__.py from a folder]",
-      "value": "main.py",
-      "required": true
-    },
-     "OTHER_CMD": {
-      "description": "If you need to run any bash command other than python specify here",
-      "value": "None",
-      "required": false
     }
   },
   "addons": [
   ],
-  "buildpacks": [{
+  "buildpacks": [
+  {
     "url": "heroku/python"
-  }],
+  },
+  {
+     "url": "https://github.com/amivin/aria2-heroku.git"
+   },
+   {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+    }
+],
   "formation": {
     "worker": {
       "quantity": 1,
